# prunez

./: .gitignore  Cargo.toml  README.md  cli.yaml  example.env
.github/workflows/: rust.yml
src/: main.rs
src/helpers/: api.rs  json.rs
